'fixed' some of the bottom bar spacing

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     background-size: cover;
     background-position: fixed;
     background-repeat: no-repeat;
+    
 }
 
 #cart-container {
@@ -269,7 +270,7 @@ h6{
 .login-and-signup {
     display: flex;
     justify-content: center;
-    height: 60vh;
+    height: 74.4vh;
     margin-bottom: 3.7rem;
 }
 
@@ -358,6 +359,7 @@ input[type='submit'], label {
     width: 60%;
     margin: -25px auto 60px auto;
     color: #292929;
+    height: 80.1vh
 }
 
 .menu-category {
